--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ flex-direction: row;">
             </div>
             <div class="B23">
                 <button class="Hireme"><span class="Hireme-text">Hire Me</span></button>
-                <button class="seeproject">See Projects</button>
+                <button class="seeproject"><span> Projects</span></button>
             </div>
               
 
