--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <!-- <base href="images/"> -->
-    <title>My Pottfolio</title>
+    <title>My Portfolio</title>
     <link rel="stylesheet" href="logo.css">
     <link rel="stylesheet" href="Text.css">
     <link rel="stylesheet" href="Main.css">
