--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ flex-direction: row;">
             <div class="toptext">
                 
                 <div class="Home" id="Home"> 
-                    <a target="_blank" href="Myportfolio/home/home.html" style="text-decoration: none; color: inherit;" >
+                    <a target="_blank" href="/home/home.html" style="text-decoration: none; color: inherit;" >
                        <p>Home</p>
                     </a>
                     </div>
