--- a/home/home.html
+++ b/home/home.html
@@ -25,7 +25,7 @@ style="background-color: rgb(238, 223, 223); height: 100%; width: 100%; "
             <div class="top"> 
                     <div class="about">
                         <div class="ig-info">
-                            <img class="igpng" src="Myportfolio/images/IGpng.png" width="35px">
+                            <img class="igpng" src="../images/IGpng.png" width="35px">
                             <p class="ig-username">imfazal0</p>
                         </div>
                         <div class="ig-about">
@@ -38,7 +38,7 @@ style="background-color: rgb(238, 223, 223); height: 100%; width: 100%; "
                     </div>
                     <div class="Photo1">
                         <div class="ph1">
-                            <img src="Myportfolio/images/1.jpg" width="100%" height="100%" >
+                            <img src="../images/1.jpg" width="100%" height="100%" >
                         </div>
                     </div>
             </div>
@@ -46,7 +46,7 @@ style="background-color: rgb(238, 223, 223); height: 100%; width: 100%; "
                  
                     <div class="Photo2">
                         <div class="ph2">
-                            <img src="Myportfolio/images/7.jpg" width="100%" height="100%" >
+                            <img src="../images/7.jpg" width="100%" height="100%" >
                         </div>
                     </div>
                     <div class="about-bottom">
