--- a/home/home.html
+++ b/home/home.html
@@ -97,9 +97,9 @@ style="background-color: rgb(238, 223, 223); height: 100%; width: 100%; "
                             <img src="https://www.freeiconspng.com/uploads/video-play-icon-11.png" alt="Video Play Vector Icon" alt="" width="20px" height="20px">
                     </div>
                     <div class="yt-long-img" >
-                        <img style="border-radius: 10px; height: 80px ; " src="/home/yt-images/5.jpg" alt="" width="120px" height="60px">
-                        <img style="border-radius: 10px; height: 80px ; " src="/home/yt-images/6.jpg" alt="" width="120px" height="60px">
-                        <img style="border-radius: 10px; height: 80px ; " src="/home/yt-images/7.jpg" alt="" width="120px" height="60px">
+                        <img style="border-radius: 10px; height: 80px ; " src="yt-images/5.jpg" alt="" width="120px" height="60px">
+                        <img style="border-radius: 10px; height: 80px ; " src="yt-images/6.jpg" alt="" width="120px" height="60px">
+                        <img style="border-radius: 10px; height: 80px ; " src="yt-images/7.jpg" alt="" width="120px" height="60px">
                     </div>
                 
             </div>
