--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>My Pottfolio</title>
     <link rel="stylesheet" href="mainpagecss/logo.css">
     <link rel="stylesheet" href="mainpagecss/Text.css">
-    <link rel="stylesheet" href="Main.css">
+    <link rel="stylesheet" href="mainpagecss/Main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bowlby+One&family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Nova+Round&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
@@ -32,13 +32,14 @@ flex-direction: row;">
             <div class="toptext">
                 
                 <div class="Home" id="Home"> 
-                    <a target="_blank" href="/Myportfolio/home/home.html" style="text-decoration: none; color: inherit;" >
-                       <p>Home</p>
+                    <a target="_blank" href="home/home.html" style="text-decoration: none; color: inherit;" >
+                        <p>Home</p>
                     </a>
-                    </div>
-                    <div class="About">
+                </div>
+                <div class="About">
+                        <a target="_blank" href="/about/about.html" style="text-decoration: none; color: inherit;" >
                         <p>About</p>
-                    
+                    </a>
                 </div>
                 <div class="Portfolio">
                     <p>Portfolio</p>
