--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ flex-direction: row;">
                     </a>
                 </div>
                 <div class="About">
-                        <a target="_blank" href="/about/about.html" style="text-decoration: none; color: inherit;" >
+                        <a target="_blank" href="about/about.html" style="text-decoration: none; color: inherit;" >
                         <p>About</p>
                     </a>
                 </div>
